<resources>
    <string name="app_name">H91</string>
    <string name="acceder">acceder</string>
    <string name="datos_de_acceso">Datos de acceso</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="h91_investments_s_l_2021_todos_los_derechos_reservados">H91 INVESTMENTS S.L. © 2021. Todos los derechos reservados.</string>
    <string name="has_olvidado_la_contrase_a">¿Has olvidado la contraseña?</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="nominas">NOMINAS</string>
    <string name="documentos">DOCUMENTOS</string>
    <string name="solicitudes">SOLICITUDES</string>
    <string name="notificaciones">NOTIFICACIONES</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="notificaciones2">NOTIFICACIONES</string>
    <string name="volver_a_menu">Volver a menu</string>
    <string name="volver11">volver</string>
    <string name="seleccione_la_n_mina_que_desea_ver">Seleccione la nómina que desea ver</string>
    <string name="ib_obtener_fecha">obtener fecha</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="volver5">volver</string>
    <string name="fecha_seleccionada">FECHA SELECCIONADA</string>
    <string name="volver6">volver</string>
    <string name="solicitudes2">SOLICITUDES</string>
    <string name="vacaciones">Vacaciones</string>
    <string name="ausencias">ausencias</string>
    <string name="otras_solicitudes">Otras solicitudes</string>
    <string name="volver7">volver</string>
    <string name="vacaciones_hasta_el_dia">Vacaciones hasta el dia</string>
    <string name="volver8">Volver</string>
    <string name="selecciona_fecha_de_vacaciones">Selecciona fecha de vacaciones</string>
    <string name="dias_restantes">Dias Restantes</string>
    <string name="vacaciones2">VACACIONES</string>
    <string name="_0">0</string>
    <string name="ausencias3">AUSENCIAS</string>
    <string name="selecciona_fecha_y_hora_de_ausencia">Selecciona Fecha y Hora de ausencia</string>
    <string name="selecciona_fecha_deseada_para_las_vacaciones">Selecciona fecha deseada para las vacaciones</string>
    <string name="solicitar">solicitar</string>
    <string name="volver9">volver</string>
    <string name="otras_solicitudes2">OTRAS SOLICITUDES</string>
    <string name="asunto">Asunto</string>
    <string name="indique_el_motivo_de_la_ausencia">Indique el motivo de la ausencia</string>
    <string name="adjuntar_documentos">Adjuntar documentos</string>
    <string name="volver0">volver</string>
    <string name="solicitar2">solicitar</string>
    <string name="ningun_documento_adjunto">Ningun documento adjunto</string>
    <string name="observaciones">Observaciones</string>
    <string name="opcional">Opcional</string>
    <string name="documentos12">DOCUMENTOS</string>
    <string name="informacion">Informacion</string>
    <string name="plantillas">plantillas</string>
    <string name="documentos_subidos">Documentos subidos</string>
    <string name="volver">volver</string>
    <string name="informacion2">INFORMACION</string>
    <string name="calendario">calendario</string>
    <string name="prevencion">prevencion</string>
    <string name="riesgos_laborales">riesgos laborales</string>
    <string name="documentos_subidos2">DOCUMENTOS SUBIDOS</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="detalle_del_documento">DETALLE DEL DOCUMENTO</string>
    <string name="asunto_documento">Asunto documento</string>
    <string name="fecha_de_subida">Fecha de subida</string>
    <string name="todo3">TODO</string>
    <string name="volver12">volver</string>
    <string name="mis_solicitudes">MIS SOLICITUDES</string>
    <string name="mis_solicitudes2">mis solicitudes</string>
    <string name="volver14">VOLVER</string>
    <string name="ir_a_notificaciones">Ir a notificaciones</string>
    <string name="gestion_plantilla">gestion plantilla</string>
    <string name="planificacion_de_tiempo">planificacion de tiempo</string>
    <string name="crear_notifiacion">crear notifiacion</string>
    <string name="gestion_plantilla2">GESTION PLANTILLA</string>
    <string name="ver_empleados">ver empleados</string>
    <string name="a_adir_empleado">añadir empleado</string>
    <string name="borrar_empleado">borrar empleado</string>
    <string name="lista_de_empleados">LISTA DE EMPLEADOS</string>
    <string name="a_adir_empleado2">AÑADIR EMPLEADO</string>
    <string name="introduce_dni">Introduce DNI</string>
    <string name="introduce_fecha_de_incorporacion">Introduce fecha de incorporacion</string>
    <string name="introduce_fecha_fin_de_contrato">Introduce fecha fin de contrato</string>
    <string name="selecciona_departamento">Selecciona departamento</string>
    <string name="crear">crear</string>
    <string name="cancelar">cancelar</string>
    <string name="borrar_empleado2">BORRAR EMPLEADO</string>
    <string name="selecciona_el_empleado_que_deseas_eliminar">Selecciona el empleado que deseas eliminar</string>
    <string name="eliminar">Eliminar</string>
    <string name="planificacion_de_tiempo2">PLANIFICACION DE TIEMPO</string>
    <string name="ir_a_planificacion_de_tiempo">ir a planificacion de tiempo</string>
    <string name="crear_notificacion">crear notificacion</string>
    <string name="crear_notificaciones">CREAR NOTIFICACIONES</string>
    <string name="seleccionar_todos">Seleccionar Todos</string>
    <string name="nombre_empleado">Nombre Empleado</string>
    <string name="a_adir_mensaje_notificacion">AÑADIR MENSAJE NOTIFICACION</string>
    <string name="asunto_notificacion">Asunto notificacion</string>
    <string name="introduce_mensaje_para_la_notificacion">Introduce mensaje para la notificacion</string>
    <string name="enviar">enviar</string>
    <string name="borrar">borrar</string>
    <string name="item_departamento">item departamento</string>
    <string name="item_empleado">item empleado</string>
    <string name="crear_mensaje_notificacion">crear mensaje notificacion</string>
    <string name="nombre_empleado2">Nombre empleado:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="departamento">Departamento:</string>
    <string name="detalle_del_empleado">DETALLE DEL EMPLEADO</string>
    <string name="todo5">TODO</string>
    <string name="nuevo_empleado">NUEVO EMPLEADO</string>
    <string name="guardar_empleado">guardar empleado</string>
    <string name="nombre">Nombre:</string>
    <string name="todo11">TODO</string>
    <string name="button">Button</string>
    <string name="dias_disponibles">Dias disponibles</string>
    <string name="todo12">TODO</string>
    <string name="pdf">PDF</string>
    <string name="imagen">Imagen</string>
    <string name="mensaje_notificacion">MENSAJE NOTIFICACION</string>
    <string name="mensaje_notificacion2">Mensaje Notificacion</string>
    <string name="indique_el_mensaje_de_la_notificacion">Indique el mensaje de la notificacion</string>
    <string name="indique_el_asunto_de_la_notifiacion">Indique el asunto de la notifiacion</string>
    <string name="todo10">TODO</string>
    <string name="button23">Button</string>
    <string name="madrid2021">Madrid2021*</string>
    <string name="correo">Correo</string>
    <string name="sanciones">Sanciones</string>
    <string name="introduce_contrase_a">introduce contraseña</string>
    <string name="enviar_notificacion">Enviar Notificacion</string>
    <string name="sancionar">Sancionar</string>
    <string name="eliminar_empleado">Eliminar Empleado</string>
    <string name="sancionar_empleado">SANCIONAR EMPLEADO</string>
    <string name="tipo_de_sanci_n">Tipo de Sanción</string>
    <string name="motivo_de_sanci_n">Motivo de sanción</string>
    <string name="indica_el_motivo_de_la_sancion">Indica el motivo de la sancion</string>
    <string name="dni_empleado">DNI EMPLEADO</string>
    <string name="volver_a_pantalla_principal">Volver a pantalla principal</string>
    <string name="dias_solicitados">Dias solicitados</string>
    <string name="button2">Button</string>
    <string name="nuevo_departamento">NUEVO DEPARTAMENTO</string>
    <string name="guardar_departamento">guardar departamento</string>
    <string name="name">Name</string>
    <string name="crear_departamento">crear departamento</string>
    <string name="introduce_nombre_de_departamento">Introduce nombre de departamento</string>
    <string name="textview">TextView</string>
    <string name="indica_las_horas_a_solicitar">Indica las horas a solicitar</string>
    <string name="nombre_documento">Nombre documento</string>
    <string name="comentario">Comentario</string>
    <string name="fecha_solicitud">Fecha solicitud</string>
    <string name="id_estado">ID Estado</string>
    <string name="gestionar_tramite">GESTIONAR TRAMITE</string>
    <string name="detalle_del_tramite">DETALLE DEL TRAMITE</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="perfil_empleado">PERFIL EMPLEADO</string>
    <string name="domicilio">Domicilio</string>
    <string name="telefono">Telefono</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="guardar_datos">guardar datos</string>
    <string name="perfil_personal">Perfil Personal</string>
    <string name="domicilio_empleado">domicilio empleado</string>
    <string name="numero_de_telefono">Numero de telefono</string>
    <string name="correo_de_contacto">correo de contacto</string>
    <string name="guardar_cambios">guardar cambios</string>
    <string name="nombre_departamento">nombre departamento</string>
    <string name="telefono1">telefono1</string>
    <string name="direccion1">direccion</string>
    <string name="fecha_de_incorporacion_empleado">fecha de incorporacion empleado</string>
    <string name="correo_de_empleado">correo de empleado</string>
    <string name="domicilio_de_empleado">domicilio de empleado</string>
    <string name="telefono_empleado">telefono empleado</string>
    <string name="como_llegar">como llegar</string>
    <string name="nombre_tramite">Nombre tramite</string>
    <string name="missolicitudes2">TODO</string>
    <string name="nombre_y_fecha_de_la_nomina">Nombre y fecha de la nomina</string>
    <string name="fecha_subida_nomina">Fecha subida nomina</string>
    <string name="detalle_nomina">DETALLE NOMINA</string>
    <string name="bt_descargarNomina">Button</string>
    <string name="descargar_nomina">Descargar nomina</string>
    <string name="boton_volver_nominas">boton volver nominas</string>
    <string name="completar_datos_empleado">COMPLETAR DATOS EMPLEADO</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="introduce_tu_telefono">Introduce tu telefono</string>
    <string name="restablecer_datos">Restablecer datos</string>
    <string name="introduce_tu_email">Introduce tu Email</string>
    <string name="introduce_tus_apellidos">Introduce tus apellidos</string>
    <string name="introduce_tu_domicilio">Introduce tu domicilio</string>
    <string name="borrar_departamento">borrar departamento</string>
    <string name="todo20">TODO</string>
    <string name="selecciona_el_departamento_que_deseas_eliminar">Selecciona el departamento que deseas eliminar</string>
    <string name="borrar_departamento2">BORRAR DEPARTAMENTO</string>
    <string name="cambiar_contrase_a3">CAMBIAR CONTRASEÑA</string>
    <string name="repite_contrase_a2">Repite contraseña</string>
    <string name="cancelar_tramite">CANCELAR TRAMITE</string>
</resources>