<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityOtrasSolicitudes">

    <TextView
        android:id="@+id/txt_otrassolicitudes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/otras_solicitudes2"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_asunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/asunto"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txt_otrassolicitudes"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/txt_otrassolicitudes"
        app:layout_constraintTop_toBottomOf="@+id/txt_otrassolicitudes" />

    <EditText
        android:id="@+id/edt_asuntoSolicitud"
        android:layout_width="385dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/indique_el_motivo_de_la_ausencia"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_asunto"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/txt_asunto"
        app:layout_constraintTop_toBottomOf="@+id/txt_asunto" />

    <Button
        android:id="@+id/bt_adjuntarDocumentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/adjuntar_documentos"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/edt_asuntoSolicitud"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/edt_asuntoSolicitud"
        app:layout_constraintTop_toBottomOf="@+id/edt_asuntoSolicitud" />

    <Button
        android:id="@+id/bt_volver5"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/volver"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="@+id/foto_galeria"
        app:layout_constraintStart_toEndOf="@+id/txt_tituloDocumento"
        app:layout_constraintTop_toBottomOf="@+id/foto_galeria" />

    <Button
        android:id="@+id/bt_solicitar4"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:onClick="solicitarAusencia"
        android:text="@string/solicitar"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/txt_tituloDocumento"
        app:layout_constraintStart_toStartOf="@+id/txt_tituloDocumento"
        app:layout_constraintTop_toBottomOf="@+id/txt_tituloDocumento" />

    <TextView
        android:id="@+id/txt_tituloDocumento"
        android:layout_width="221dp"
        android:layout_height="26dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:hint="@string/ningun_documento_adjunto"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/foto_galeria"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_imagenSeleccionada" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/observaciones"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/edt_asuntoSolicitud"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/edt_asuntoSolicitud"
        app:layout_constraintTop_toBottomOf="@+id/edt_asuntoSolicitud" />

    <EditText
        android:id="@+id/edt_observacionesMensaje"
        android:layout_width="384dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/opcional"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_asuntoSolicitud"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_asuntoSolicitud"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/foto_galeria"
        android:layout_width="135dp"
        android:layout_height="73dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todo8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_adjuntarDocumentos"
        app:srcCompat="@drawable/icono_imagen" />

    <Button
        android:id="@+id/bt_imagenSeleccionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imagen"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toStartOf="@+id/bt_pdfSeleccionado"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_adjuntarDocumentos"
        tools:visibility="visible" />

    <Button
        android:id="@+id/bt_pdfSeleccionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/pdf"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_adjuntarDocumentos"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>