<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarDetalleEmpleadoActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="149dp"
        android:layout_height="103dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_tituloDetalle"
        app:layout_constraintStart_toStartOf="@+id/txt_tituloDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txt_tituloDetalle"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txt_tituloDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detalle_del_empleado"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_detalle_nombree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/nombre_empleado"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txt_detalle_apellidoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/apellidos"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_detalle_nombree"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="@+id/txt_detalle_nombree"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalle_nombree" />

    <TextView
        android:id="@+id/txt_detalle_departamentoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/departamento"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_detalle_apellidoe"
        app:layout_constraintStart_toStartOf="@+id/txt_detalle_apellidoe"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalle_apellidoe" />

    <TextView
        android:id="@+id/txt_detalleCorreoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/correo"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_detalle_departamentoe"
        app:layout_constraintStart_toStartOf="@+id/txt_detalle_departamentoe"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalle_departamentoe" />

    <TextView
        android:id="@+id/txt_detalleUsuarioe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/usuario"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txt_detalleSancionese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sanciones"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_detalleCorreoe"
        app:layout_constraintStart_toStartOf="@+id/txt_detalleCorreoe"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalleCorreoe" />
</androidx.constraintlayout.widget.ConstraintLayout>